--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -17,6 +17,8 @@
   margin-left: 0;
   padding-top: 32px;
   padding-bottom: 0;
+  position: relative;
+  z-index: 10;
 }
 
 .addtask-btn,
