--- a/styles/contacts-card.css
+++ b/styles/contacts-card.css
@@ -3,9 +3,12 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-top: 110px;
-    z-index: 3;
-    position: absolute;
+    height: 100%;
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .edit-card {
